crates/papyrus_storage/src/serializers/snapshots/papyrus_storage__serializers__serializers_test__hints_regression_hint_1515.snap
---
source: crates/papyrus_storage/src/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 5
- 235
- 1
- 6
- 0
- 0
- 0
- 0
- 0
- 0

