crates/papyrus_storage/src/serializers/snapshots/papyrus_storage__serializers__serializers_test__hints_regression_hint_1769.snap
---
source: crates/papyrus_storage/src/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 6
- 233
- 1
- 6
- 0
- 0
- 0
- 0
- 0
- 0

